# mercy

./: .env.example  .gitignore  AGENTS.md  COORDINATE_SYSTEM.md  Cargo.toml  README.md  example-locations.txt  flake.nix  justfile
.github/workflows/: backend-checks.yml  nix-builds.yml
backend/: Cargo.toml  gen_known_locations.py
backend/assets/: known_locations.csv
backend/examples/: test_match.rs
backend/src/: api.rs  browser.rs  config.rs  detector.rs  known_locations.rs  lib.rs  main.rs  scanner.rs  state.rs
docs/: scanning.md
frontend/: bun.nix  cache-handler.js  next.config.mjs  package.json  tsconfig.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/proxy/[...path]/: route.ts
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/components/: ActionButtons.tsx  ExchangeList.tsx  GotoForm.tsx  ManualScanForm.tsx  ScreenshotView.tsx  StatusPanel.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/src/lib/: api.ts  auth.ts
nix/: module.nix
src/: api.rs  browser.rs  detector.rs  main.rs  scanner.rs  state.rs
