[package]
name = "mercy"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures = "0.3"
image = "0.25"
imageproc = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.25.0"
